--- a/task3.html
+++ b/task3.html
@@ -27,19 +27,19 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr style="background-color: rgb(201, 223, 224);">
             <th scope="row">1</th>
             <td>Mark</td>
             <td>Otto</td>
             <td>@mdo</td>
         </tr>
-        <tr>
+        <tr style="background-color: rgb(228, 204, 214);">
             <th scope="row">2</th>
             <td>Jacob</td>
             <td>Thornton</td>
             <td>@fat</td>
         </tr>
-        <tr>
+        <tr style="background-color: rgb(225, 224, 204);">
             <th scope="row">3</th>
             <td>Larry</td>
             <td>the Bird</td>
